Fix alignment of location and time on truck detail page

--- a/foodtruck/static/css/theme.css
+++ b/foodtruck/static/css/theme.css
@@ -143,7 +143,7 @@ footer {
 }
 
 .truck_detail ul {
-  padding: 10px;
+  padding: 0 !important;
 }
 
 .truck_detail li {
